# Argis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.jsonl  setup.sh
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-docs-issue.yml  3-feature-request.yml  bug.yml  config.yml  documentation.yml  feature.yml  question.yml
.github/workflows/: docs.yml  jekyll-gh-pages.yml  pages.yml
agent/: __init__.py  cli.py  config.py  graph.py  orchestrator.py  player.py  policy.py  report.py  router.py  state.py
apps/demo/: gradio_app.py
apps/gradio_demo/: README.md  app.py
configs/: default.yaml  prompts.yaml  providers.yaml
connectors/: __init__.py  base.py  registry.py
connectors/gmail/: connector.py
connectors/imap/: connector.py
data/samples/: demo_emails.jsonl
docs/: Design_template.md  _config.yml  api-contract.md  architecture.md  changelog.md  demo.md  design.md  glossary.md  hf_space.md  index.md  local_dev.md  manual.md  methodology.md  migration-guide.md  observability.md  package-lock.json  package.json  protocol_v1.md  release-gates.md  releases.md  runbook.md  security-boundary.md  testing.md  threat_model.md  v2_architecture.md
docs-site/: .gitignore  _config.yml  package-lock.json  package.json
docs-site/.vitepress/: config.mts
docs-site/_data/: nav.yml
docs-site/_layouts/: default.html
docs/.vitepress/: config.mts
engine/: argis.py  bootstrap.py  orchestrator.py  session.py
examples/: 00_quickstart.py  01_local_litellm.py  01_local_ollama.py  02_litellm_multi_provider.py  02_multi_provider_routing.py  03_tools_smoke.py  email_sample.json
schemas/: __init__.py  email_schema.py  evidence_schema.py  explanation_schema.py
scoring/: __init__.py  fusion.py  rules.py
scripts/: export_requirements.sh  lint.sh  run_cli.sh  run_gradio.sh  run_local.sh  skillsbench_skillpacks.py  skillsbench_skills.py  smoke_test.sh  test.sh
tests/: conftest.py  test_agent_deep_detection.py  test_agent_smoke.py  test_api_skills_output.py  test_attachment_analysis_v2.py  test_config.py  test_content_analyzer.py  test_contextual_escalation.py  test_email_labels.py  test_email_parse.py  test_evidence_pack.py  test_explain.py  test_header_intel.py  test_hf_eval_balanced_sample.py  test_judge_validation.py  test_no_legacy_imports.py  test_offline_evaluator.py  test_pipeline_smoke.py  test_planner.py  test_precheck_tuning.py  test_preprocessing_v2.py  test_risk_fusion_v2.py  test_router.py  test_scoring.py  test_scoring_regressions.py  test_settings.py  test_skill_catalog.py  test_skill_fixed_chain.py  test_skill_registry.py  test_skill_router.py  test_text_prescore.py  test_tool_catalog.py  test_tool_plugins.py  test_tools.py  test_url_analysis_v2.py  test_url_extract.py  test_verdict_calibration.py
tools/: __init__.py  attachment_analyzer.py  clear_model_cache.py  content_analyzer.py  header_analyzer.py  llm_client.py  parser.py  tool_registry.py  url_analyzer.py
tools_builtin/: parser.py
(+426 files in other folders)
